--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -60,10 +60,9 @@
   </div>
   <ul class="pager">
   <li><a href="#!/">Previous</a></li>
-  <li ng-click = "save()" type="button">Save</li>
   </ul>
   <ul class="pager">
-  <li ng-click="submit()"><a href="#!/list">Submit</a></li>
+  <li ng-click="save();submit()"><a href="#!/list">Submit</a></li>
   </ul>
 </form>
 </div>
