--- a/public/templates/basicInfo.html
+++ b/public/templates/basicInfo.html
@@ -125,7 +125,7 @@
 
 <div class="btn-toolbar pull-right" role="toolbar" aria-label="Toolbar with button groups">
   <div class="btn-group mr-2" role="group" aria-label="Sec group">
-    <a href="#!/about" class="btn btn-primary pull-right" role="button" ng-click = "save()" ng-if="frm.$valid">Next</a>
+    <a href="#!/about" class="btn btn-primary" role="button" ng-click = "save()" ng-if="frm.$valid">Next</a>
   </div>
 </div>
 
